Remove Badges & Implement InfoBars. Update ComboBox dropdown behaviours

--- a/src/Winhance.UI/Features/Common/Controls/PowerPlanComboBox.xaml
+++ b/src/Winhance.UI/Features/Common/Controls/PowerPlanComboBox.xaml
@@ -17,6 +17,7 @@
     <ComboBox
         x:Name="PowerPlanSelector"
         MinWidth="220"
+        MaxDropDownHeight="300"
         ItemsSource="{x:Bind ItemsSource, Mode=OneWay}"
         SelectedValue="{x:Bind SelectedValue, Mode=OneWay}"
         SelectedValuePath="Value"
