--- a/src/Winhance.UI/Features/Common/Resources/SettingTemplates.xaml
+++ b/src/Winhance.UI/Features/Common/Resources/SettingTemplates.xaml
@@ -4,7 +4,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:viewModels="using:Winhance.UI.Features.Optimize.ViewModels"
-    xmlns:models="using:Winhance.UI.Features.Common.Models"
     xmlns:controls="using:CommunityToolkit.WinUI.Controls"
     xmlns:commonControls="using:Winhance.UI.Features.Common.Controls">
 
@@ -31,88 +30,72 @@
         </Style.Setters>
     </Style>
 
-    <!-- Badge ItemTemplate - shared across all settings pages -->
-    <DataTemplate x:Key="BadgeItemTemplate" x:DataType="models:SettingBadgeInfo">
-        <commonControls:SettingBadge
-            BadgeType="{x:Bind Type}"
-            Text="{x:Bind Text}"
-            Tooltip="{x:Bind Tooltip}"/>
-    </DataTemplate>
-
     <DataTemplate x:Key="SettingItemTemplate" x:DataType="viewModels:SettingItemViewModel">
-        <Grid Visibility="{x:Bind IsVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
-            <controls:SettingsCard
-                Header="{x:Bind Name}"
-                Description="{x:Bind Description}"
-                IsEnabled="{x:Bind EffectiveIsEnabled, Mode=OneWay}"
-                HeaderIcon="{x:Bind Converter={StaticResource SettingIconConverter}}"
-                Padding="16,12,16,12">
-                <Grid VerticalAlignment="Center">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="{x:Bind BadgeColumnWidth, Mode=OneWay}"/>
-                    </Grid.ColumnDefinitions>
+        <StackPanel Visibility="{x:Bind IsVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
+                    Margin="0,0,0,2">
+            <!-- Main settings card with overlays -->
+            <Grid>
+                <controls:SettingsCard
+                    Header="{x:Bind Name}"
+                    Description="{x:Bind Description}"
+                    IsEnabled="{x:Bind EffectiveIsEnabled, Mode=OneWay}"
+                    HeaderIcon="{x:Bind Converter={StaticResource SettingIconConverter}}"
+                    Padding="16,12,16,12">
+                    <commonControls:SettingsCardItem Setting="{x:Bind}" VerticalAlignment="Center"/>
+                </controls:SettingsCard>
 
-                    <!-- Setting control -->
-                    <commonControls:SettingsCardItem Grid.Column="0" Setting="{x:Bind}" VerticalAlignment="Center"/>
-
-                    <!-- Badges -->
-                    <ItemsControl
-                        Grid.Column="1"
-                        ItemsSource="{x:Bind Badges}"
-                        Visibility="{x:Bind HasBadges, Converter={StaticResource BooleanToVisibilityConverter}}"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Right"
-                        Margin="8,0,0,0"
-                        ItemTemplate="{StaticResource BadgeItemTemplate}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Orientation="Vertical" Spacing="4"/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                    </ItemsControl>
-                </Grid>
-            </controls:SettingsCard>
-
-            <!-- Applying overlay with spinner -->
-            <Border
-                Visibility="{x:Bind IsApplying, Mode=OneWay}"
-                Background="{ThemeResource SmokeFillColorDefaultBrush}"
-                CornerRadius="4">
-                <ProgressRing IsActive="{x:Bind IsApplying, Mode=OneWay}" Width="24" Height="24"/>
-            </Border>
-
-            <!-- Lock overlay covering entire SettingsCard -->
-            <Grid Visibility="{x:Bind IsLocked, Mode=OneWay}">
-                <Grid.Transitions>
-                    <TransitionCollection>
-                        <AddDeleteThemeTransition/>
-                    </TransitionCollection>
-                </Grid.Transitions>
-                <!-- Semi-transparent background layer -->
+                <!-- Applying overlay with spinner -->
                 <Border
+                    Visibility="{x:Bind IsApplying, Mode=OneWay}"
                     Background="{ThemeResource SmokeFillColorDefaultBrush}"
-                    CornerRadius="4"/>
-                <!-- Button layer with full opacity -->
-                <Button
-                    Command="{x:Bind UnlockCommand}"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Padding="12,8">
-                    <StackPanel Orientation="Horizontal" Spacing="8">
-                        <Viewbox Width="16" Height="16">
-                            <Path
-                                Data="{StaticResource PrivacyIconPath}"
-                                Fill="#FFA500"
-                                Stretch="Uniform"/>
-                        </Viewbox>
-                        <TextBlock
-                            Text="{x:Bind ClickToUnlockText}"
-                            VerticalAlignment="Center"/>
-                    </StackPanel>
-                </Button>
+                    CornerRadius="4">
+                    <ProgressRing IsActive="{x:Bind IsApplying, Mode=OneWay}" Width="24" Height="24"/>
+                </Border>
+
+                <!-- Lock overlay covering entire SettingsCard -->
+                <Grid Visibility="{x:Bind IsLocked, Mode=OneWay}">
+                    <Grid.Transitions>
+                        <TransitionCollection>
+                            <AddDeleteThemeTransition/>
+                        </TransitionCollection>
+                    </Grid.Transitions>
+                    <!-- Semi-transparent background layer -->
+                    <Border
+                        Background="{ThemeResource SmokeFillColorDefaultBrush}"
+                        CornerRadius="4"/>
+                    <!-- Button layer with full opacity -->
+                    <Button
+                        Command="{x:Bind UnlockCommand}"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Padding="12,8">
+                        <StackPanel Orientation="Horizontal" Spacing="8">
+                            <Viewbox Width="16" Height="16">
+                                <Path
+                                    Data="{StaticResource PrivacyIconPath}"
+                                    Fill="#FFA500"
+                                    Stretch="Uniform"/>
+                            </Viewbox>
+                            <TextBlock
+                                Text="{x:Bind ClickToUnlockText}"
+                                VerticalAlignment="Center"/>
+                        </StackPanel>
+                    </Button>
+                </Grid>
             </Grid>
-        </Grid>
+
+            <!-- Warning/info banner below the settings card (wrapper collapses when not shown) -->
+            <Border Visibility="{x:Bind HasWarningMessage, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
+                    Margin="0,0,0,8">
+                <InfoBar
+                    IsOpen="{x:Bind HasWarningMessage, Mode=OneWay}"
+                    Severity="{x:Bind WarningSeverity, Mode=OneWay}"
+                    Message="{x:Bind WarningText, Mode=OneWay}"
+                    IsClosable="False"
+                    Margin="0,-1,0,0"
+                    CornerRadius="0,0,4,4"/>
+            </Border>
+        </StackPanel>
     </DataTemplate>
 
     <!-- ListViewItem container style for settings lists - removes default padding/margins -->
