--- a/src/Winhance.UI/Features/Optimize/OptimizePage.xaml
+++ b/src/Winhance.UI/Features/Optimize/OptimizePage.xaml
@@ -50,7 +50,7 @@
                     Click="BreadcrumbOverview_Click"
                     Padding="8,4">
                     <StackPanel Orientation="Horizontal" Spacing="8">
-                        <Viewbox Width="16" Height="16">
+                        <Viewbox Width="16" Height="16" VerticalAlignment="Center" Margin="0,-2,0,0">
                             <PathIcon Data="{StaticResource OptimizeIconPath}" Foreground="{ThemeResource TextFillColorPrimaryBrush}"/>
                         </Viewbox>
                         <TextBlock Text="{x:Bind ViewModel.BreadcrumbRootText}" VerticalAlignment="Center"/>
@@ -73,9 +73,12 @@
                     Padding="8,4">
                     <DropDownButton.Content>
                         <StackPanel Orientation="Horizontal" Spacing="8">
-                            <Viewbox x:Name="BreadcrumbSectionIconBox" Width="16" Height="16">
+                            <!-- PathIcon for SVG-based icons -->
+                            <Viewbox x:Name="BreadcrumbSectionIconBox" Width="16" Height="16" VerticalAlignment="Center" Margin="0,-2,0,0">
                                 <PathIcon x:Name="BreadcrumbSectionIcon" Foreground="{ThemeResource TextFillColorPrimaryBrush}"/>
                             </Viewbox>
+                            <!-- FontIcon for glyph-based icons (Update, Sound) -->
+                            <FontIcon x:Name="BreadcrumbSectionGlyph" FontSize="16" VerticalAlignment="Center" Foreground="{ThemeResource TextFillColorPrimaryBrush}" Visibility="Collapsed"/>
                             <TextBlock x:Name="BreadcrumbSectionText" VerticalAlignment="Center"/>
                         </StackPanel>
                     </DropDownButton.Content>
